fixed rally page overflow for cases without a join button

--- a/style/rally.scss
+++ b/style/rally.scss
@@ -128,14 +128,13 @@
     height: 450px;
 
     grid-template-areas:
-    'a .'
-    'b b'
-    '. .'
-    'c .'
-    'd d'
+    'a a a'
+    'b b b'
+    'c c c'
+    '. d d'
     ;
-    grid-template-rows: 8fr 120px 12fr 12fr;
-    grid-template-columns: auto auto 1fr auto auto;
+    grid-template-rows: 8fr 120px 12fr;
+    grid-template-columns: auto 1fr auto;
     align-items: end;
     color: white;
 
